--- a/assets/css/checklist.css
+++ b/assets/css/checklist.css
@@ -67,7 +67,7 @@ li:hover {
 
 li.checked {
     text-decoration: line-through;
-    color: #a0a0a0;
+    color: #FF6584;
     background-color: #404040;
 }
 
