--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -17,42 +17,28 @@ body {
 }
 
 .menu-container {
-    /* Remova esta linha */
-    /* position: fixed; */
     top: 0;
     left: 0;
     width: 100%;
     z-index: 1000;
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 0 0 15px 15px;
-    padding: 20px;
+    padding: 10px 0; /* Diminui o padding vertical */
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
 }
-
-
-.content {
-    margin-top: 150px; /* Adicionar espaço abaixo do menu para o conteúdo */
-    text-align: center;
-    font-size: 24px;
-    color: #ffffff;
-    opacity: 0;
-    transition: opacity 0.5s ease;
-}
-
-
 
 .menu {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 20px;
+    gap: 10px; /* Ajusta o espaço entre os itens do menu */
     list-style-type: none;
     margin: 0;
-    padding: 0;
+    padding: 5px 0;
 }
 
 .menu-item {
-    padding: 15px 25px;
+    padding: 8px 16px; /* Diminui o espaçamento interno dos botões */
     cursor: pointer;
     font-size: 18px;
     font-weight: bold;
@@ -64,6 +50,23 @@ body {
     position: relative;
     overflow: hidden;
     color: white;
+    text-decoration: none;
+    color: inherit;
+}
+
+
+
+.menu-item a {
+    text-decoration: none; /* Remove a sublinha */
+    color: inherit; /* Garante que o link herda a cor do menu-item */
+}
+
+.menu-item a:link,
+.menu-item a:visited,
+.menu-item a:hover,
+.menu-item a:active {
+    text-decoration: none; /* Remove sublinha de todos os estados do link */
+    color: inherit; /* Garante que a cor seja herdada do item do menu */
 }
 
 .menu-item::before {
@@ -73,12 +76,7 @@ body {
     left: -100%;
     width: 100%;
     height: 100%;
-    background: linear-gradient(
-        120deg,
-        transparent,
-        rgba(255, 255, 255, 0.2),
-        transparent
-    );
+    background: linear-gradient(120deg, transparent, rgba(255, 255, 255, 0.2), transparent);
     transition: all 0.5s;
 }
 
@@ -99,7 +97,7 @@ body {
 }
 
 .content {
-    margin-top: 40px;
+    margin-top: 10;
     text-align: center;
     font-size: 24px;
     color: #ffffff;
